small corrections in form and language